06_helm_chart/base-chart-resources/msa_dev_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-backend-main
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-backend-user
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-backend-review
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-db
