06_helm_chart/base-chart-resources/msa_dev_db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: dev-db
  name: msa-db
  labels:
    app: msa-db
spec:
  serviceName: msa-db-headless
  replicas: 1
  selector:
    matchLabels:
      app: msa-db
  template:
    metadata:
      labels:
        app: msa-db
    spec:
      containers:
      - name: mysql
        image: makersworld/msa-db-mysql8:amd64
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        hostPath:
          path: /data/mysql
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev-db
  name: msa-db-headless
  labels:
    app: msa-db
spec:
  clusterIP: None
  selector:
    app: msa-db
  ports:
  - port: 3306
    name: mysql
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev-db
  name: msa-db-service
  labels:
    app: msa-db
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30306  # 외부에서 접근할 포트
  selector:
    app: msa-db
