06_helm_chart/base-chart-resources/msa_svc_extname.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-main-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: msa-main-service.dev-backend-main.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: msa-user-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: msa-user-service.dev-backend-user.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: msa-review-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: msa-review-service.dev-backend-review.svc.cluster.local
