06_helm_chart/base-chart-resources/msa_svc_extname_helm.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-main-helm-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: msa-main-helm-service.dev-backend-main.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: msa-user-helm-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: msa-user-helm-service.dev-backend-user.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: msa-review-helm-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: msa-review-helm-service.dev-backend-review.svc.cluster.local
