06_helm_chart/base-chart-resources/msa_dev_ingress_helm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress-helm
  namespace: ingress-nginx
  annotations:
    # 아래 설정 시 kubectl logs -n ingress-nginx -l app=ingress-nginx 로 로그 조회 가능
    nginx.ingress.kubernetes.io/enable-access-log: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1/orders
        pathType: Prefix
        backend:
          service:
            name: msa-main-helm-service
            port:
              number: 80
      - path: /api/v1/users
        pathType: Prefix
        backend:
          service:
            name: msa-user-helm-service
            port:
              number: 80
      - path: /api/v1/reviews
        pathType: Prefix
        backend:
          service:
            name: msa-review-helm-service
            port:
              number: 80
